--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://DiAndyW.github.io/portfolio",
+  "homepage": "https://diandyw.github.io/portfolio",
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
